Added questions from bot.

--- a/locale/ru/LC_MESSAGES/default.po
+++ b/locale/ru/LC_MESSAGES/default.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-04-10 00:33+0300\n"
-"PO-Revision-Date: 2016-04-10 00:35+0300\n"
+"POT-Creation-Date: 2016-04-10 15:09+0300\n"
+"PO-Revision-Date: 2016-04-10 15:13+0300\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -16,18 +16,82 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.5.7\n"
 
-#: methods.py:10
+#: methods.py:144
+msgid "List of active subscriptions:"
+msgstr "Активные подписки"
+
+#: methods.py:53
+msgid "List of available TV shows:"
+msgstr "Доступные сериалы:"
+
+#: methods.py:87 methods.py:118
+msgid "Specified series is not on my list."
+msgstr "Указанный сериал отстутсвует в нашей базе."
+
+#: methods.py:182
+msgid "The language has changed!"
+msgstr "Язык изменён."
+
+#: methods.py:172
+msgid "Unknown language!"
+msgstr "Неизвестный язык!"
+
+#: methods.py:163
+msgid "Which language do you prefer?"
+msgstr "Какой язык вы предпочитаете?"
+
+#: methods.py:82
+msgid "Which series would you like to subscribe?"
+msgstr "На какой сериал вы бы хотели подписаться?"
+
+#: methods.py:113
+msgid "Which series would you like to unsubscribe?"
+msgstr "От какого сериала вы бы хотели отписаться?"
+
+#: methods.py:93
+msgid "You are already subscribed to this series."
+msgstr "Вы уже подписаны на этот сериал."
+
+#: methods.py:184
+msgid "You are already using this language!"
+msgstr "Вы уже используете этот язык."
+
+#: methods.py:142
+msgid "You are not subscribed to any of the series."
+msgstr "Вы не подписаны ни на один сериал."
+
+#: methods.py:127
+msgid "You are not subscribed to the show."
+msgstr "Вы не подписаны на этот сериал."
+
+#: methods.py:37
 msgid "You can control me by sending these commands:"
-msgstr "Вы можете управлять мной, посылая эти команды:"
+msgstr "Вы можете управлять мной с помощью этих команд:"
 
-#: methods.py:12
+#: methods.py:97
+msgid "You have subscribed to the show."
+msgstr "Вы подписались на сериал."
+
+#: methods.py:125
+msgid "You have unsubscribed from the show."
+msgstr "Вы отписались от сериала."
+
+#: methods.py:42
+msgid "change language"
+msgstr "изменить язык"
+
+#: methods.py:39
+msgid "show active subscriptions"
+msgstr "показать активные подписки"
+
+#: methods.py:38
 msgid "show list of available TV shows"
-msgstr "показать список доступных сериалов"
+msgstr "показать список сериалов"
 
-#: methods.py:13
+#: methods.py:40
 msgid "subscribe to a TV show"
 msgstr "подписаться на сериал"
 
-#: methods.py:14
+#: methods.py:41
 msgid "unsubscribe from a TV show"
 msgstr "отписаться от сериала"
